       [Thanks to walter.stanish for the patch]
      Textbgcolour now fills background of box arcs (rbox, abox etc..).
      Fix incorrect use of perror() after fprintf() which may not have
       resulted in the right error being reported.
       (issue #57, thanks Neils!)
      Fix assertion if ... is placed on the same line as another arc, but
       after the arc has been specified.

0.18: 30/08/2010
      Fix bad strncat() use allowing possible overrun.
       Thanks to ensc42 and Neils for finding this.
      Fix multi-line labels causing multiple dividers ("---")
       Thanks to llucax for the report, issue #31.
      Add support for arrowless arcs and bi-directional arrows as requested
       by xmlscott and started by Niels.  Can now use arrows such as <->, <=>
       for bidirectional arrows, --, ==, .. etc... for arcs without arrows.
       Issue #29.
      Fix text rendering over the box edge in multiline labels.
      Add patch to honour linecolour in boxes, issue #33.
       Thanks to Neils for this patch.
      Add 'textbgcolour' and 'arctextbgcolour' attributes to set the
       background colour for text in an entity or on an arc.
      Add support for -X and X- arcs which indicate a lost message.
      Add support for a new 'arcskip' attribute which allows an arc to have
       an additional slant to show delays or similar.
      Change configure.ac to attempt to use gdlib-config and then pkg-config.
       This enables simpler configuration/build on platforms where gd hasn't
       been updated to supply a pkg-config file e.g. Cygwin.  Update README
       regarding building on Cygwin and progress the cygport.

0.17: 31/08/2009
      Change the command line parser so a space is not needed to split
       switches from the value e.g. -Tpng is now acceptable.
      Take input filename as last parameter if it doesn't match any switches.
      Default output filename is <input filename>.<output type>.