@@ -49,6 +49,9 @@
        (issue #57, thanks Neils!)
       Fix assertion if ... is placed on the same line as another arc, but
        after the arc has been specified.
+      Fix regression where blank lines at the start of input would be 
+       rejected and parsing stopped.
+       (Thanks Bernhard for the report and example)
 
 0.18: 30/08/2010
       Fix bad strncat() use allowing possible overrun.
